hphp/test/zend/good/ext/standard/tests/general_functions/header_redirection_013.php
<?php
header('HTTP/1.1 308 Permanent Redirect');
header('Location: http://example.com/');
?>
