hphp/test/zend/bad/bug42767.php
<?php
highlight_string('<?php /*some comment..');
?>